added responsive viewport meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="css/index.css" rel="stylesheet" />
         <title>Color to Pokemon</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="container">
